modal popup failed attempt :(

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -37,6 +37,6 @@ footer {
 .colBGtwo {
   padding: 10px 10px 30px 10px;
   color: #c8d0ea;
-  background: #cfd4e2;
+  background: #5e5555;
   border-radius: 5px;
 }
